<resources>
    <string name="app_name">FoodDude</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="title_activity_rider_maps">Map</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="cart_total">Cart Total : ₹ ---</string>
    <string name="delivery_charge">Delivery Charge : ₹ --</string>
    <string name="shared_prefs_filename">com.example.dubstep.UserDataFile</string>
    <string name="shared_prefs_user">com.example.dubstep.UserData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payu_merchant_key">Fq3cAXrg</string>
    <string name="payu_merchant_id">7351553</string>
    <string name="about_us1">Its hightime you wave Hi to good food and  Bye to artificial colours, preservatives and harmful adulterations!!!</string>
    <string name="about_us2">At Food dude, we envision a healthy, natural and sustainable food delivery, ensuring the best of quality checks being done, before our food reaches your doorstep.</string>
    <string name="about_us3">Let\'s be honest here. It\'s insane to compromise on the quality of food. Being casual in this aspect can make you pay huge hospital bills either in the vicinity or future.</string>
    <string name="about_us4">We at Fooddude ensure that that our customers get the premium of quality food without compromising with the quantity.</string>
    <string name="about_us5">So what are you waiting for? Go satiate your hunger at the comfort of your home by placing your first order today.</string>
    <string name="about_us7">We are just a fingertip away!!!!</string>
    <string name="contact_us1">We are just a call or text away</string>
    <string name="contact_us2">For details you can email us at</string>
    <string name="contact_us3">Follow us : </string>
    <string name="contact_us4">Visit our website</string>
    <string name="contact_us5">Gouri Nagar; \n Old Town Samantarapur; \n Bhubaneswar Khordha; \n Odisha 751002</string>
    <string name="refund_policy">You acknowledge that your cancellation( attempted or purported) of an Order shall amount to a breach of your unconditional and irrevocable authorization in favour of Fooddude to place that Order against the Restaurant /Store(s) on your behalf (“Authorization Breach"). In the event you commit an Authorization Breach, you shall be liable to pay the liquidated damages of an amount equivalent to the Order Value. You hereby authorize Fooddude to deduct or collect the amount payable as liquidated damages through such means as Fooddude may determine in its discretion, including without limitation, by deducting such amount from any payment made towards your next Order \n
In the event, if You have provided incorrect particulars, e.g., contact number, delivery address, etc., or  You were unresponsive, not reachable, or unavailable for the fulfillment of the services offered to You, You will not be eligible for any refunds. \n
No replacement/refund / or any other resolution will be provided without Restaurant’s/Store(s)’ permission. \n
For any complaint, concerning the Order which shall include instances but not be limited to food spillage, foreign object in food, delivery of the wrong order or food and beverages or Products, poor quality, You will be required to share the proof of the same before any refund can be provided. \n
You shall not be entitled to a refund in case instructions placed along with the Order are not followed in the form and manner You had intended. Instructions are followed by the Restaurant /Store on a best-efforts basis. \n
All refunds shall be processed in the same manner as they are received, unless refunds have been provided to You in the form of credits, the refund amount will reflect in your account based on respective banks policies. \n</string>
</resources>