<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AboutUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:background="@drawable/doodle_background">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:scaleX="1.3"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_brush_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="About Us"
            android:layout_centerHorizontal="true"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="352dp"
            android:layout_height="583dp"
            android:layout_below="@+id/about_us"
            android:layout_centerInParent="true"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aclonica"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_us1"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />

                <TextView
                    android:id="@+id/about2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about1"
                    android:fontFamily="@font/aclonica"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/about_us2"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/about3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about2"
                    android:fontFamily="@font/aclonica"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/about_us3"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/about4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about3"
                    android:fontFamily="@font/aclonica"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/about_us4"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />


                <TextView
                    android:id="@+id/about5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about4"
                    android:fontFamily="@font/aclonica"
                    android:paddingTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/about_us5"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/about7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about5"
                    android:fontFamily="@font/aclonica"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_us7"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>